update landing page

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1324,5 +1324,8 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #ccc;
+}
+video::-webkit-media-controls-start-playback-button {
+  display: none;
 }
